Fixed user dropdown text word-wrap

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -373,3 +373,9 @@ body > #page-wrap {
     float: left;
     padding-left: 20px;
 }
+
+.profileItemList {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
